# crow-vm

./: Cargo.toml  DESIGN.md  README.md
.devcontainer/: devcontainer.json
src/: ast.rs  env.rs  errors.rs  func.rs  handle.rs  lexer.rs  lib.rs  limits.rs  object.rs  op.rs  parser.rs  slot.rs  string.rs  tests.rs  token.rs  typechecker.rs  types.rs  value.rs  vm.rs
syntax/crow-vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
syntax/crow-vscode/syntaxes/: crow.tmLanguage.json
tests/: test_language.rs  wololo.crow
tests/language/: README.md
tests/language/core/: hello-world.crow
tests/language/local/: arithmetic.crow
